fixed odd width and horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,6 @@ html {
     'nv' 
     "mn"
     "ft";
-    width: 99vw;
 }
 
 .nav {
@@ -67,9 +66,12 @@ footer {
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    
+    display: grid;
+    grid-template-areas: 
+    's1'
+    's2'
+    's3';
+    grid-template-columns: auto;
     grid-area: mn;
     max-width: 100vw;
 
@@ -112,7 +114,6 @@ h1 {
     grid-area: s3;
     background-color: var(--white);
     height: 100vh;
-    max-width: 100vw;
     box-shadow: 0px 0px 10px 8px rgba(0,0,0,0.05);
     position: relative;
 }
@@ -175,7 +176,7 @@ p {
     
 }
 
-.button :hover {
+.button:hover {
     padding-top: 5em;
     padding-bottom: 5em;
 }
@@ -239,12 +240,14 @@ h3 {
     display: grid;
     grid-auto-flow: column;
     grid-auto-columns: 24%;
-    width: 100vw;
+    max-width: 99vw;
     overflow-x: auto;
     overscroll-behavior-inline: contain;
+    scrollbar-width: thin;
+    scrollbar-color: var(--white) var(--white);
 }
-.card-wrapper::-webkit-scrollbar {
-    display: none;
+.card-wrapper:hover {
+    scrollbar-color:unset;
 }
 .card {
     background-color: var(--gray);
